# APC_assignment2

./: README.md
assignment/: CMakeLists.txt  main.cpp
assignment/include/: clogger_adapter.h
assignment/include/decorators/: base_decorator.h  running_time_decorator.h  timestamp_decorator.h
assignment/src/: clogger_adapter.cpp
assignment/src/decorators/: base_decorator.cpp  running_time_decorator.cpp  timestamp_decorator.cpp
